# AURION-APP

./: .env.example  .env.vercel  .eslintrc.json  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  PROGRESS.md  README.md  SKILL.md  build2.txt  build_result.txt  clone_debug.txt  clone_debug2.txt  middleware.ts  next.config.js  package-lock.json  package.json  skills-lock.json  tailwind.config.ts  test_result.txt  tsconfig.json  vercel.json  vitest.config.ts
.agents/: AGENTS.md  SKILLS_CATALOG.md  skills-index.json
.agents/skills/gitlab/: pyproject.toml
.agents/skills/gitlab/tests/: test_constants.py
.agents/skills/gitlab/tests/corpus/: 0_remote_path  1_float  1_large  2_nested_json  2_unicode  3_json_payload  3_large  3_malformed  4_float  4_negative  5_field_flag  5_large  5_single_field  README.md
.agents/skills/powerpoint/: SKILL.md  pyproject.toml
.agents/skills/powerpoint/scripts/: export_slides.py  extract_content.py  pptx_charts.py  pptx_fills.py  pptx_text.py  pptx_utils.py  render_pdf_images.py  validate_deck.py  validate_slides.py
.agents/skills/powerpoint/tests/: Invoke-PptxPipeline.Tests.ps1  conftest.py  fuzz_harness.py  strategies.py  test_export_slides.py  test_extract_content.py  test_fuzz_build_deck.py  test_fuzz_pptx_tables.py  test_pptx_utils.py
.agents/skills/powerpoint/tests/corpus/: 0_theme_ref  0_valid_hex  1_invalid_hex  1_valid_hex  README.md
.agents/skills/powerpoint/tests/fixtures/: minimal_test_fixture.pptx
.claude/: settings.json
.claude/skills/pup/: CHANGELOG.md  Cargo.toml  README.md
.claude/skills/pup/agents/: api-management.md  audience-management.md  cicd.md  cloud-cost.md  container-monitoring.md  data-deletion.md  data-governance.md  database-monitoring.md  fleet-automation.md  gcp-integration.md  incident-response.md  infrastructure.md  logs.md  monitoring-alerting.md  notebooks.md  observability-pipelines.md  service-catalog.md  spark-pod-autosizing.md  third-party-integrations.md  traces.md  usage-metering.md  user-access-management.md  workflows.md
.claude/skills/pup/agents/_templates/: EXAMPLE_logs_refactored.md  permission-model-mixed.md  permission-model-write.md  time-formats.md
.claude/skills/pup/docs/: COMMANDS.md  CONTRIBUTING.md  LLM_GUIDE.md  MIGRATION_GUIDE.md  OAUTH2.md  REVIEW.md  TESTING.md  TROUBLESHOOTING.md
.claude/skills/pup/docs/examples/runbooks/: incident-triage.yaml
.claude/skills/pup/scripts/: test_harness.py
.claude/skills/pup/skills/dd-apm/: SKILL.md
.claude/skills/pup/skills/dd-code-generation/: SKILL.md
.claude/skills/pup/skills/dd-debugger/: SKILL.md
.claude/skills/pup/skills/dd-file-issue/: SKILL.md
.claude/skills/pup/skills/dd-pup/: SKILL.md
.claude/skills/pup/skills/dd-symdb/: SKILL.md
.claude/skills/pup/src/: api.rs  client.rs  config.rs  skills.rs  test_commands.rs  util.rs  version.rs
.claude/skills/pup/src/auth/: dcr.rs  pkce.rs  types.rs
.claude/skills/pup/src/commands/: acp.rs  agentless_scanning.rs  alias.rs  apm.rs  app_builder.rs  authn_mappings.rs  bits.rs  cicd.rs  completions.rs  containers.rs  cost.rs  dbm.rs  ddsql.rs  error_tracking.rs  feature_flags.rs  google_chat.rs  idp.rs  llm_obs.rs  logs.rs  metrics.rs  mod.rs  monitors.rs  network.rs  on_call.rs  processes.rs  product_analytics.rs  security.rs  skills.rs  slos.rs  software_catalog.rs  status_pages.rs  symdb.rs  traces.rs  workflows.rs
.claude/skills/pup/src/extensions/: exec.rs
.claude/skills/pup/src/runbooks/: engine.rs  loader.rs
.claude/skills/pup/tests/snapshots/: alias_list__human.json  api-keys_get__human.json  apm_entities_list__agent.json  apm_services_stats__human.json  app-builder_get__agent.json  app-builder_get__human.json  app-builder_list__agent.json  app-keys_list__agent.json  auth_list__human.json  cases_search__agent.json  cases_search__human.json  cloud_aws_list__agent.json  cloud_aws_list__human.json  cloud_azure_list__human.json  cloud_oci_tenancies_get__agent.json  cost_projected__human.json  dashboards_get__human.json  dashboards_list__human.json  ddsql_table__agent.json  events_search__human.json  fleet_agents_list__human.json  fleet_deployments_list__human.json  incidents_list__agent.json  incidents_list__human.json  infrastructure_hosts_get__agent.json  infrastructure_hosts_get__human.json  infrastructure_hosts_list__agent.json  integrations_jira_accounts_list__human.json  integrations_list__human.json  logs_aggregate__agent.json  logs_query__agent.json  metrics_list__human.json  metrics_metadata_get__agent.json  misc_ip-ranges__agent.json  misc_status__human.json  monitors_--help__agent.json  monitors_get__human.json  monitors_search__agent.json  monitors_search__human.json  network_devices_get__human.json  (+31 more)
.github/: dependabot.yml
__tests__/: ErrorBoundary.test.tsx  ai-content-parser.test.ts  api-schemas.test.ts  api-utils.test.ts  cdn-models.test.ts  client-utils.test.ts  commands.test.ts  constants.test.ts  page-helpers.test.ts  preview-builder.test.ts  rate-limiter.test.ts  sanitize.test.ts  share-utils.test.ts  suggestions.test.ts  system-prompts.test.ts  templates-data.test.ts  useConversations.test.ts  useDeploy.test.ts  useEditorState.test.ts  useFileOperations.test.ts  useKeyboardShortcuts.test.ts  usePanelStore.test.ts  workspace-context.test.ts  zip-utils.test.ts
_backup/: package.json  tailwind.config.ts  tsconfig.json
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
components/: ChatPanel.tsx  CinematicBuilder.tsx  CodeEditorPanel.tsx  DatabasePanel.tsx  DeployBanner.tsx  ErrorBoundary.tsx  IdePanel.tsx  IntegrationsSidePanel.tsx  LandingView.tsx  Overlays.tsx  PaymentsPanel.tsx  PreviewPanel.tsx  ResearchSidePanel.tsx  TerminalPanel.tsx  TerminalSection.tsx  TopBar.tsx  WebVitals.tsx
docs/: architecture.md  deployment.md  gaps.md  security.md  stack.md
hooks/: use21stBrowser.ts  useActionParser.ts  useChat.ts  useClone.ts  useCollaboration.ts  useConversations.ts  useDeploy.ts  useDragResize.ts  useEditorState.ts  useFeatures.ts  useFileOperations.ts  useIde.ts  useInspectors.ts  useIntegrations.ts  useMediaGeneration.ts  (+12 more)
(+1609 files in other folders)
