[package]
name = "pup"
version = "0.45.1"
edition = "2021"
rust-version = "1.93.1"
publish = false

[lib]
name = "pup_wasm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["native"]
native = [
    "dep:datadog-api-client",
    "datadog-api-client/native-tls",
    "datadog-api-client/zstd",
    "datadog-api-client/retry",
    "dep:keyring",
    "dep:dirs",
    "dep:open",
    "dep:sha2",
    "dep:base64",
    "dep:rand",
    "dep:url",
    "dep:aes-gcm",
    "dep:uuid",
    "dep:chrono",
    "dep:regex",
    "dep:clap",
    "dep:clap_complete",
    "tokio/full",
    "comfy-table/tty",
    "dep:tokio-tungstenite",
    "dep:yamux",
    "dep:russh",
    "dep:ssh-key",
    "dep:futures",
    "dep:tokio-util",
]
wasi = [
    "dep:datadog-api-client",
    "datadog-api-client/rustls-tls",
    "dep:sha2",
    "dep:base64",
    "dep:rand",
    "dep:url",
    "dep:aes-gcm",
    "dep:uuid",
    "dep:chrono",
    "dep:regex",
    "dep:clap",
    "dep:clap_complete",
    "tokio/rt",
    "tokio/macros",
    "tokio/time",
]
vendored-openssl = ["dep:openssl"]
browser = [
    "dep:datadog-api-client",
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde-wasm-bindgen",
    "dep:getrandom",
]

[dependencies]
# CLI (optional — not needed for browser WASM library)
clap = { version = "4", features = ["derive"], optional = true }
clap_complete = { version = "4", optional = true }

# Async runtime (features selected by native/wasi feature flags)
tokio = { version = "1", default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_norway = "0.9"

# HTTP — stream feature omitted on wasm32 (wasm-streams pulls in wasm-bindgen,
# incompatible with wasm32-wasip1; bytes_stream() calls are all cfg(not(wasm32)))
reqwest = { version = "0.13", features = ["json", "form"] }
http = "1"

# Error handling
anyhow = "1"

# UUID parsing (version-matched to DD client)
uuid = { version = "1", features = ["v4"], optional = true }

# Time
chrono = { version = "0.4", optional = true }
regex = { version = "1", optional = true }

# Output formatting (tty feature disabled for WASM — no crossterm)
comfy-table = { version = "7", default-features = false }

# Auth — OAuth2 PKCE + token storage (optional — not needed for browser)
sha2 = { version = "0.11", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.10", optional = true }
url = { version = "2", optional = true }

# Vendored OpenSSL for cross-compilation (optional — only for CI cross-builds)
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Crypto for fallback storage (optional — not needed for browser)
aes-gcm = { version = "0.10", optional = true }

# ---- Native-only dependencies ----

# Synthetics tunnel
tokio-tungstenite = { version = "0.29", features = ["native-tls"], optional = true }
yamux = { version = "0.13", optional = true }
russh = { version = "0.60", optional = true }
ssh-key = { version = "0.6", features = ["p256", "std"], optional = true }
futures = { version = "0.3", optional = true }
tokio-util = { version = "0.7", features = ["compat", "io"], optional = true }

# Datadog API client — latest master as of 2026-04-04 (557230b8)
# Use default-features = false; feature sets are activated per-target via features above
datadog-api-client = { git = "https://github.com/DataDog/datadog-api-client-rust", rev = "557230b8d7921a9288e8283f2c45770ec3789a05", optional = true, default-features = false }

# HTTP middleware (version-matched to DD client; compiles on all targets)
reqwest-middleware = "0.5"
async-trait = "0.1"

# OS keychain for token storage
keyring = { version = "3", features = ["apple-native", "linux-native"], optional = true }

# XDG config directory resolution
dirs = { version = "6", optional = true }

# Browser opening for OAuth login
open = { version = "5", optional = true }

# ---- Browser WASM dependencies (wasm-bindgen) ----
wasm-bindgen = { version = "=0.2.114", optional = true }
wasm-bindgen-futures = { version = "=0.4.64", optional = true }
js-sys = { version = "=0.3.91", optional = true }
web-sys = { version = "=0.3.91", features = ["Window", "Storage"], optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

# RNG support in browser WASM (getrandom 0.4 — wasm_js feature enables JS crypto API)
getrandom = { version = "0.4", features = ["wasm_js"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.13", features = ["stream"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.7"
security-framework-sys = "2.17"

[dev-dependencies]
mockito = "1"
